@@ -6,16 +6,9 @@ import dev.crepe.domain.admin.service.AdminBankManageService;
 import dev.crepe.domain.bank.model.dto.request.BankDataRequest;
 import dev.crepe.domain.bank.model.dto.request.BankSignupDataRequest;
 import dev.crepe.domain.bank.service.BankService;
-import dev.crepe.domain.core.account.model.entity.Account;
-import dev.crepe.domain.core.account.repository.AccountRepository;
-import dev.crepe.domain.core.account.service.AccountService;
-import dev.crepe.domain.core.util.coin.regulation.exception.TokenHistoryNotFoundException;
-import dev.crepe.domain.core.util.coin.regulation.model.BankTokenStatus;
 import dev.crepe.domain.core.util.coin.regulation.model.entity.BankToken;
-import dev.crepe.domain.core.util.coin.regulation.repository.BankTokenRepository;
-import dev.crepe.domain.core.util.history.token.model.entity.TokenHistory;
-import dev.crepe.domain.core.util.history.token.repository.TokenHistoryRepository;
-import dev.crepe.domain.core.util.history.token.service.impl.PortfolioHistoryServiceImpl;
+import dev.crepe.domain.core.util.coin.regulation.service.BankTokenInfoService;
+import dev.crepe.domain.core.util.coin.regulation.service.TokenService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
@@ -24,7 +17,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -32,11 +25,9 @@ import java.util.stream.Collectors;
 public class AdminBankManageServiceImpl implements AdminBankManageService {
 
 
+    private final TokenService tokenService;
     private final BankService bankService;
-    private final AccountService accountService;
-    private final PortfolioHistoryServiceImpl portfolioHistoryService;
-    private final BankTokenRepository bankTokenRepository;
-    private final TokenHistoryRepository tokenHistoryRepository;
+    private final BankTokenInfoService bankTokenInfoService;
 
 
     // 은행 계정 생성
@@ -54,12 +45,13 @@ public class AdminBankManageServiceImpl implements AdminBankManageService {
     public List<GetAllBankTokenResponse> getAllBankTokenResponseList(int page, int size) {
         PageRequest pageRequest = PageRequest.of(page, size);
 
-        // 모든 TokenHistory 조회
-        return bankTokenRepository.findAll(pageRequest)
-                .stream()
+        // BankToken 조회
+        List<BankToken> bankTokens = bankTokenInfoService.findAllBankTokens(pageRequest);
+
+        // 응답 생성
+        return bankTokens.stream()
                 .flatMap(bankToken -> bankToken.getTokenHistories().stream())
                 .map(tokenHistory -> {
-                    // PortfolioHistoryDetail 매핑
                     List<GetAllBankTokenResponse.PortfolioDetail> portfolioDetails = tokenHistory.getPortfolioDetails()
                             .stream()
                             .map(detail -> GetAllBankTokenResponse.PortfolioDetail.builder()
@@ -70,9 +62,8 @@ public class AdminBankManageServiceImpl implements AdminBankManageService {
                                     .updateAmount(detail.getUpdateAmount())
                                     .updatePrice(detail.getUpdatePrice())
                                     .build())
-                            .collect(Collectors.toList());
+                            .toList();
 
-                    // TokenHistoryResponse 생성
                     return GetAllBankTokenResponse.builder()
                             .bankId(tokenHistory.getBankToken().getBank().getId())
                             .bankName(tokenHistory.getBankToken().getBank().getName())
@@ -87,32 +78,14 @@ public class AdminBankManageServiceImpl implements AdminBankManageService {
                             .portfolioDetails(portfolioDetails)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // 은행 토큰 발행 요청 승인
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void approveBankTokenRequest(Long tokenHistoryId) {
-
-        // TokenHistory 조회
-        TokenHistory tokenHistory = tokenHistoryRepository.findById(tokenHistoryId)
-                .orElseThrow(() -> new TokenHistoryNotFoundException(tokenHistoryId));
-        BankToken bankToken = tokenHistory.getBankToken();
-
-        // 계좌 활성화
-        accountService.activeBankTokenAccount(bankToken, tokenHistory);
-        // 포토폴리오 변경 내역 추가
-        portfolioHistoryService.updatePortfolio(bankToken);
-        // 토큰 발행 내역 추가
-        portfolioHistoryService.updateTokenHistoryStatus( tokenHistoryId, BankTokenStatus.APPROVED);
-
-        // 토큰 발행 승인
-        bankToken.approve();
-        bankToken.changeTotalSupply(tokenHistory.getTotalSupplyAmount());
-        bankTokenRepository.save(bankToken);
-
-
+        tokenService.approveBankTokenRequest(tokenHistoryId);
     }
 
 
@@ -120,13 +93,6 @@ public class AdminBankManageServiceImpl implements AdminBankManageService {
     @Transactional
     @Override
     public void rejectBankTokenRequest(RejectBankTokenRequest request, Long tokenHistoryId) {
-
-        // TokenHistory 조회
-        TokenHistory tokenHistory = tokenHistoryRepository.findById(tokenHistoryId)
-                .orElseThrow(() -> new TokenHistoryNotFoundException(tokenHistoryId));
-
-        // 토큰 발행 상태 변경
-        portfolioHistoryService.updateTokenHistoryStatus(request, tokenHistory.getId(),  BankTokenStatus.REJECTED);
-
+        tokenService.rejectBankTokenRequest(request, tokenHistoryId);
     }
 }
